--- a/app-practique-course/counter-app/package.json
+++ b/app-practique-course/counter-app/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.3.1",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "whatwg-fetch": "^3.6.2"
   }
 }
