--- a/app-practique-course/counter-app/package.json
+++ b/app-practique-course/counter-app/package.json
@@ -9,6 +9,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "jest": "^29.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -17,11 +18,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "react-test-renderer": "^18.2.0",
     "vite": "^2.9.5",
     "whatwg-fetch": "^3.6.2"
   }
