--- a/app-practique-course/gif-app/tsconfig.json
+++ b/app-practique-course/gif-app/tsconfig.json
@@ -17,7 +17,6 @@
     "jsx": "react-jsx",
     "types": ["node", "jest", "@testing-library/jest-dom"],
   },
-  "include": ["src/**/*", "./jest-setup.ts"],
-  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts", "./jest-setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
